[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/selection.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/background.tex" type="Texture" id=2]
[ext_resource path="res://assets/textures/settings_panel.tex" type="Texture" id=3]
[ext_resource path="res://scripts/panel_selection.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/btn_play.tex" type="Texture" id=5]
[ext_resource path="res://assets/textures/btn_play_pressed.tex" type="Texture" id=6]
[ext_resource path="res://assets/textures/btn_play_disabled.tex" type="Texture" id=7]
[ext_resource path="res://scenes/btn_selection.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]

resource/name = "intro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("panel_selection:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 0.7 ), "transitions":FloatArray( 1, -4, 1 ), "update":0, "values":[ Vector2( 0, -1950 ), Vector2( 0, -24 ), Vector2( 0, -53 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "outro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("panel_selection:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4 ), "transitions":FloatArray( 4, 1 ), "update":0, "values":[ Vector2( 0, -53 ), Vector2( 0, -2010 ) ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.7 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"end_of_outro" } ] }

[node name="selection" type="Node"]

script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="panel_selection" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -1950.0
margin/right = 1080.0
margin/bottom = -30.0
texture = ExtResource( 3 )
stretch_mode = 0
script/script = ExtResource( 4 )

[node name="btn_play" type="TextureButton" parent="panel_selection"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 398.0
margin/top = 1693.0
margin/right = 689.0
margin/bottom = 1982.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/disabled = ExtResource( 7 )

[node name="btn_selection_1" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 115.0
margin/top = 783.0
margin/right = 407.0
margin/bottom = 1066.0
value = 1

[node name="btn_selection_2" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 399.0
margin/top = 783.0
margin/right = 691.0
margin/bottom = 1066.0
value = 2

[node name="btn_selection_3" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 680.0
margin/top = 783.0
margin/right = 972.0
margin/bottom = 1066.0
value = 3

[node name="btn_selection_4" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 115.0
margin/top = 1067.0
margin/right = 407.0
margin/bottom = 1350.0
value = 4

[node name="btn_selection_5" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 399.0
margin/top = 1067.0
margin/right = 691.0
margin/bottom = 1350.0
value = 5

[node name="btn_selection_6" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 680.0
margin/top = 1067.0
margin/right = 972.0
margin/bottom = 1350.0
value = 6

[node name="btn_selection_7" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 115.0
margin/top = 1349.0
margin/right = 407.0
margin/bottom = 1632.0
value = 7

[node name="btn_selection_8" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 399.0
margin/top = 1349.0
margin/right = 691.0
margin/bottom = 1632.0
value = 8

[node name="btn_selection_9" parent="panel_selection" instance=ExtResource( 8 )]

margin/left = 680.0
margin/top = 1349.0
margin/right = 972.0
margin/bottom = 1632.0
value = 9

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/intro = SubResource( 1 )
anims/outro = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[connection signal="pressed" from="panel_selection/btn_play" to="." method="_on_btn_play_pressed"]

[connection signal="pressed" from="panel_selection/btn_play" to="panel_selection" method="_on_btn_play_pressed"]


